Fix spacing of the goal indicators

--- a/src/extension/features/budget/budget-category-features/goal-indicator/index.css
+++ b/src/extension/features/budget/budget-category-features/goal-indicator/index.css
@@ -1,5 +1,8 @@
-.toolkit-goal-indicator,
-.toolkit-upcoming-indicator {
+.toolkit-goal-indicator {
   color: gray;
   padding-left: 0.5em;
+}
+
+.toolkit-goal-indicator:last-child {
+  padding-right: 0.5em;
 }
